edit people and CROP

--- a/news.html
+++ b/news.html
@@ -433,6 +433,7 @@ $(document).ready(function () {
 
 <p> </p>
 <ul>
+<li><strong>November 12</strong> Tom submitted his thesis. Congrats</li>
 <li><strong>September 30</strong> Sophie successfully defended her thesis. Congrats</li>
 <li><strong>September 15 -25</strong> Markus participates in a visit to Beijing, Nanjing and Shanghai presenting work from the lab<br />
 </li>
