--- a/people.html
+++ b/people.html
@@ -452,16 +452,6 @@ $(document).ready(function () {
 
 </div>
 <p>José is a PhD student studying introgression during grain amaranth domestication and its influence on the crop’s genome biology. <!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
-<div style="float: left">
-<p><img src="own_images/people/sophie.JPG" style="width: 100px ;border:10px solid white"></p>
-</div>
-<strong>Sophie Schreiner</strong>
-<div style="float: left">
-
-</div>
-<p>Sophie is a biology undergraduate student doing her thesis research in the lab. She is studying the molecular control of seed color variation in amaranth.</p>
-<!-- break -->
-<p><br> <br> <br> <br> <br> <br> <br></p>
 <!-- break -->
 <div style="float: left">
 <p><img src="own_images/people/tom.jpg" style="width: 100px ;border:10px solid white"></p>
@@ -482,6 +472,12 @@ $(document).ready(function () {
 <p>Contact me if you are interested in joining the lab. <a href="mailto:mgstetter@gmail.com">contact me</a></p>
 <!-- break -->
 <p><br> <br> <br> <br> <br> <!-- break --></p>
+<div id="lab-alumni" class="section level2">
+<h2>Lab alumni</h2>
+<ul>
+<li>Sophie Schreiner (BSc student)</li>
+</ul>
+</div>
 <div id="past-visitors" class="section level2">
 <h2>Past Visitors</h2>
 <ul>
