--- a/reading.html
+++ b/reading.html
@@ -435,6 +435,10 @@ $(document).ready(function () {
 <p>C.R.O.P is our weekly journal club for anyone interested in evolution. We meet on Thursdays at 4 pm at <a href="https://goo.gl/maps/HTsuGbneog1P3uWs5">Magnus</a> for an open discussion about the weekly paper in a relaxed atmosphere. Anybody is welcome to join us. The idea is that everyone reads the paper before and we dive directly in without formal presentation of the paper. If you would like to suggest a paper please email <a href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
 <div id="november" class="section level3">
 <h3>November</h3>
+<div id="thursday-november-21" class="section level4">
+<h4>Thursday November 21</h4>
+<p><a href="https://www.nature.com/articles/s41477-019-0548-z">Lu et al 2019</a> The prevalence, evolution and chromatin signatures of plant regulatory elements</p>
+</div>
 <div id="thursday-november-14" class="section level4">
 <h4>Thursday November 14</h4>
 <p><a href="https://www.biorxiv.org/content/10.1101/767970v2.full">Ostevik et al preprint</a> Asymmetric gene flow causes cascading reproductive isolation</p>
