--- a/reading.html
+++ b/reading.html
@@ -433,6 +433,15 @@ $(document).ready(function () {
 
 <p> </p>
 <p>C.R.O.P is our weekly journal club for anyone interested in evolution. We meet on Thursdays at 4 pm at <a href="https://goo.gl/maps/3FA8MjibbLWhtGJV6">Cafe Duddel</a> (NEW PLACE!) for an open discussion about the weekly paper in a relaxed atmosphere. Anybody is welcome to join us. The idea is that everyone reads the paper before and we dive directly in without formal presentation of the paper. If you would like to suggest a paper please email <a href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
+<div id="january" class="section level3">
+<h3>January</h3>
+<div id="thursday-january-9" class="section level4">
+<h4>Thursday January 9</h4>
+<p>No C.R.O.P - Machine learning workshop</p>
+</div>
+</div>
+<div id="section" class="section level2">
+<h2>2019</h2>
 <div id="december" class="section level3">
 <h3>December</h3>
 <div id="thursday-december-12" class="section level4">
@@ -619,7 +628,7 @@ $(document).ready(function () {
 <p><a href="https://www.pnas.org/content/116/6/2158">Chen, et al 2019</a> Allele frequency dynamics in a pedigreed natural population</p>
 </div>
 </div>
-<div id="january" class="section level3">
+<div id="january-1" class="section level3">
 <h3>January</h3>
 <div id="thursday-january-31" class="section level4">
 <h4>Thursday January 31</h4>
@@ -642,7 +651,8 @@ $(document).ready(function () {
 <p><a href="http://science.sciencemag.org/content/362/6420/1309">Kistler et al 2018</a> Multiproxy evidence highlights a complex evolutionary legacy of maize in South America</p>
 </div>
 </div>
-<div id="section" class="section level2">
+</div>
+<div id="section-1" class="section level2">
 <h2>2018</h2>
 <div id="december-1" class="section level3">
 <h3>December</h3>
