--- a/people.html
+++ b/people.html
@@ -452,16 +452,6 @@ $(document).ready(function () {
 
 </div>
 <p>José is a PhD student studying introgression during grain amaranth domestication and its influence on the crop’s genome biology. <!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
-<!-- break -->
-<div style="float: left">
-<p><img src="own_images/people/tom.jpg" style="width: 100px ;border:10px solid white"></p>
-</div>
-<strong>Tom Winkler</strong>
-<div style="float: left">
-
-</div>
-<p>Tom is a biology undergraduate student conducting his thesis research in the lab. He is identifying transcription factor families in <em>Amaranthus</em> and related species. <!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
-<!-- break -->
 <div style="float: left">
 <p><img src="own_images/DSC_0020.jpg" style="width: 100px ;border:10px solid white"></p>
 </div>
@@ -476,6 +466,7 @@ $(document).ready(function () {
 <h2>Lab alumni</h2>
 <ul>
 <li>Sophie Schreiner (BSc student)</li>
+<li>Tom Winkler (BSc student)</li>
 </ul>
 </div>
 <div id="past-visitors" class="section level2">
