--- a/reading.html
+++ b/reading.html
@@ -435,6 +435,10 @@ $(document).ready(function () {
 <p>C.R.O.P is our weekly journal club for anyone interested in evolution. We meet on Thursdays at 4 pm at <a href="https://goo.gl/maps/3FA8MjibbLWhtGJV6">Cafe Duddel</a> (NEW PLACE!) for an open discussion about the weekly paper in a relaxed atmosphere. Anybody is welcome to join us. The idea is that everyone reads the paper before and we dive directly in without formal presentation of the paper. If you would like to suggest a paper please email <a href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
 <div id="january" class="section level3">
 <h3>January</h3>
+<div id="thursday-january-16" class="section level4">
+<h4>Thursday January 16</h4>
+<p>No C.R.O.P</p>
+</div>
 <div id="thursday-january-9" class="section level4">
 <h4>Thursday January 9</h4>
 <p>No C.R.O.P - Machine learning workshop</p>
