CROP papers added

--- a/reading.html
+++ b/reading.html
@@ -433,6 +433,17 @@ $(document).ready(function () {
 
 <p> </p>
 <p>C.R.O.P is our weekly journal club for anyone interested in evolution. We meet on Thursdays at 4 pm at <a href="https://goo.gl/maps/HTsuGbneog1P3uWs5">Magnus</a> for an open discussion about the weekly paper in a relaxed atmosphere. Anybody is welcome to join us. The idea is that everyone reads the paper before and we dive directly in without formal presentation of the paper. If you would like to suggest a paper please email <a href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
+<div id="feburary" class="section level3">
+<h3>Feburary</h3>
+<div id="thursday-febraury-12" class="section level4">
+<h4>Thursday Febraury 12</h4>
+<p><a href="https://journals.plos.org/plosbiology/article?id=10.1371/journal.pbio.3000586">Albers and McVean 2020</a> Dating genomic variants and shared ancestry in population-scale sequencing data</p>
+</div>
+<div id="thursday-febraury-6" class="section level4">
+<h4>Thursday Febraury 6</h4>
+<p><a href="https://www.nature.com/articles/s41467-019-13730-0">Baduel et al. 2019</a> Relaxed purifying selection in autopolyploids drives transposable element over-accumulation which provides variants for local adaptation</p>
+</div>
+</div>
 <div id="january" class="section level3">
 <h3>January</h3>
 <div id="thursday-january-30" class="section level4">
