--- a/reading.html
+++ b/reading.html
@@ -435,6 +435,14 @@ $(document).ready(function () {
 <p>C.R.O.P is our weekly journal club for anyone interested in evolution. We meet on Thursdays at 4 pm at <a href="https://goo.gl/maps/HTsuGbneog1P3uWs5">Magnus</a> for an open discussion about the weekly paper in a relaxed atmosphere. Anybody is welcome to join us. The idea is that everyone reads the paper before and we dive directly in without formal presentation of the paper. If you would like to suggest a paper please email <a href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
 <div id="feburary" class="section level3">
 <h3>Feburary</h3>
+<div id="thursday-febraury-27" class="section level4">
+<h4>Thursday Febraury 27</h4>
+<p><a href="https://www.nature.com/articles/s41586-020-1997-2">Groen et al. 2020</a> The strength and pattern of natural selection on gene expression in rice</p>
+</div>
+<div id="thursday-febraury-20" class="section level4">
+<h4>Thursday Febraury 20</h4>
+<p>No C.R.O.P - Carnaval</p>
+</div>
 <div id="thursday-febraury-12" class="section level4">
 <h4>Thursday Febraury 12</h4>
 <p><a href="https://journals.plos.org/plosbiology/article?id=10.1371/journal.pbio.3000586">Albers and McVean 2020</a> Dating genomic variants and shared ancestry in population-scale sequencing data</p>
