--- a/reading.html
+++ b/reading.html
@@ -433,8 +433,27 @@ $(document).ready(function () {
 
 <p> </p>
 <p>C.R.O.P is our weekly journal club for anyone interested in evolution. We meet on Thursdays at 4 pm at <a href="https://goo.gl/maps/HTsuGbneog1P3uWs5">Magnus</a> for an open discussion about the weekly paper in a relaxed atmosphere. Anybody is welcome to join us. The idea is that everyone reads the paper before and we dive directly in without formal presentation of the paper. If you would like to suggest a paper please email <a href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
+<div id="march" class="section level3">
+<h3>March</h3>
+<div id="thursday-march-12" class="section level4">
+<h4>Thursday March 12</h4>
+<p><a href="https://journals.plos.org/plosbiology/article/file?type=printable&amp;id=10.1371/journal.pbio.3000214">Vasseur et al 2020</a></p>
+</div>
+<div id="thursday-march-5" class="section level4">
+<h4>Thursday March 5</h4>
+<p><a href="https://onlinelibrary.wiley.com/doi/full/10.1002/ece3.6002">Price et al. 2020</a> In the presence of population structure: From genomics to candidate genes underlying local adaptation</p>
+</div>
+</div>
 <div id="feburary" class="section level3">
 <h3>Feburary</h3>
+<div id="thursday-febraury-27" class="section level4">
+<h4>Thursday Febraury 27</h4>
+<p><a href="https://www.nature.com/articles/s41586-020-1997-2">Groen et al. 2020</a> The strength and pattern of natural selection on gene expression in rice</p>
+</div>
+<div id="thursday-febraury-20" class="section level4">
+<h4>Thursday Febraury 20</h4>
+<p>No C.R.O.P - Carnaval</p>
+</div>
 <div id="thursday-febraury-12" class="section level4">
 <h4>Thursday Febraury 12</h4>
 <p><a href="https://journals.plos.org/plosbiology/article?id=10.1371/journal.pbio.3000586">Albers and McVean 2020</a> Dating genomic variants and shared ancestry in population-scale sequencing data</p>
@@ -601,7 +620,7 @@ $(document).ready(function () {
 <p><a href="https://www.biorxiv.org/content/10.1101/588715v1">Xue et al preprint</a> Hybrid decay: a transgenerational epigenetic decline in vigor and viability triggered in backcross populations of teosinte with maize</p>
 </div>
 </div>
-<div id="march" class="section level3">
+<div id="march-1" class="section level3">
 <h3>March</h3>
 <div id="thursday-march-28" class="section level4">
 <h4>Thursday March 28</h4>
