--- a/reading.html
+++ b/reading.html
@@ -432,9 +432,13 @@ $(document).ready(function () {
 
 
 <p> </p>
-<p>C.R.O.P is our weekly journal club for anyone interested in evolution. We meet on Thursdays at 4 pm at <a href="https://goo.gl/maps/HTsuGbneog1P3uWs5">Magnus</a> for an open discussion about the weekly paper in a relaxed atmosphere. Anybody is welcome to join us. The idea is that everyone reads the paper before and we dive directly in without formal presentation of the paper. If you would like to suggest a paper please email <a href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
+<p>C.R.O.P is our weekly journal club for anyone interested in evolution. We meet on Thursdays at 4 pm at <a href="https://goo.gl/maps/mamsnSV5ZqThF4YY8">Theatercafe Filmdose</a> for an open discussion about the weekly paper in a relaxed atmosphere. Anybody is welcome to join us. The idea is that everyone reads the paper before and we dive directly in without formal presentation of the paper. If you would like to suggest a paper please email <a href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
 <div id="march" class="section level3">
 <h3>March</h3>
+<div id="thursday-march-19" class="section level4">
+<h4>Thursday March 19</h4>
+<p>No C.R.O.P.</p>
+</div>
 <div id="thursday-march-12" class="section level4">
 <h4>Thursday March 12</h4>
 <p><a href="https://journals.plos.org/plosbiology/article/file?type=printable&amp;id=10.1371/journal.pbio.3000214">Vasseur et al 2020</a> Nonlinear phenotypic variation uncovers the emergence of heterosis in Arabidopsis thaliana</p>
