Kerstin,Tom,Julio added. CROP update

--- a/people.html
+++ b/people.html
@@ -453,6 +453,30 @@ $(document).ready(function () {
 </div>
 <p>José is a PhD student studying introgression during grain amaranth domestication and its influence on the crop’s genome biology. <!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
 <div style="float: left">
+<p><img src="own_images/people/tom.jpg" style="width: 100px ;border:10px solid white"></p>
+</div>
+<strong>Tom Winkler</strong>
+<div style="float: left">
+
+</div>
+<p>Tom is a master student studying the genomic distribution of MYB transcription factors in the amaranth genome and their involvement in metabolic pathways <!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
+<div style="float: left">
+<p><img src="own_images/DSC_0020.jpg" style="width: 100px ;border:10px solid white"></p>
+</div>
+<strong>Kerstin Schulz</strong>
+<div style="float: left">
+
+</div>
+<p>Kerstin is CEPLAS graduate student rotating in the lab. Kerstin emplyes ancestral recombination graphs to study the evolution of maize <!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
+<div style="float: left">
+<p><img src="own_images/DSC_0020.jpg" style="width: 100px ;border:10px solid white"></p>
+</div>
+<strong>Julio Martinez</strong>
+<div style="float: left">
+
+</div>
+<p>Julio is a master student wroking on the molecular validation of domestication genes in grain amaranth. <!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
+<div style="float: left">
 <p><img src="own_images/DSC_0020.jpg" style="width: 100px ;border:10px solid white"></p>
 </div>
 <strong>Maybe you?</strong>
