--- a/reading.html
+++ b/reading.html
@@ -432,7 +432,16 @@ $(document).ready(function () {
 
 
 <p> </p>
-<p>C.R.O.P is our weekly journal club for anyone interested in evolution. We meet on Thursdays at 4 pm at <a href="https://goo.gl/maps/mamsnSV5ZqThF4YY8">Theatercafe Filmdose</a> for an open discussion about the weekly paper in a relaxed atmosphere. Anybody is welcome to join us. The idea is that everyone reads the paper before and we dive directly in without formal presentation of the paper. If you would like to suggest a paper please email <a href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
+<p>C.R.O.P is our weekly journal club for anyone interested in evolution. We meet on Thursdays at 4.30 pm at <a href="https://goo.gl/maps/mamsnSV5ZqThF4YY8">Theatercafe Filmdose</a> for an open discussion about the weekly paper in a relaxed atmosphere.</p>
+<p><strong>Until further notice we will meet online. Please email <a href="mailto:m.stetter@uni-koeln.de">Markus</a> if you would like to participate.</strong></p>
+<p>Anybody is welcome to join us. The idea is that everyone reads the paper before and we dive directly in without formal presentation of the paper. If you would like to suggest a paper please email <a href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
+<div id="may" class="section level3">
+<h3>May</h3>
+<div id="thursday-may-7" class="section level4">
+<h4>Thursday May 7</h4>
+<p>What is ancestry? <a href="https://journals.plos.org/plosgenetics/article?id=10.1371/journal.pgen.1008624">Mathieson and Scally 2020</a></p>
+</div>
+</div>
 <div id="march" class="section level3">
 <h3>March</h3>
 <div id="thursday-march-19" class="section level4">
@@ -609,7 +618,7 @@ $(document).ready(function () {
 <p><a href="https://www.biorxiv.org/content/10.1101/342352v3">Stankowski et al preprint</a> Widespread selection and gene flow shape the genomic landscape during a radiation of monkeyflowers</p>
 </div>
 </div>
-<div id="may" class="section level3">
+<div id="may-1" class="section level3">
 <h3>May</h3>
 <p>We took a little break to set up the lab and find a place</p>
 </div>
