--- a/reading.html
+++ b/reading.html
@@ -439,7 +439,7 @@ $(document).ready(function () {
 <h3>May</h3>
 <div id="thursday-may-7" class="section level4">
 <h4>Thursday May 7</h4>
-<p>What is ancestry? <a href="https://journals.plos.org/plosgenetics/article?id=10.1371/journal.pgen.1008624">Mathieson and Scally 2020</a></p>
+<p><a href="https://journals.plos.org/plosgenetics/article?id=10.1371/journal.pgen.1008624">Mathieson and Scally 2020</a> What is ancestry?</p>
 </div>
 </div>
 <div id="march" class="section level3">
