--- a/publications.html
+++ b/publications.html
@@ -436,8 +436,8 @@ $(document).ready(function () {
 <div id="preprint" class="section level2">
 <h2>Preprint</h2>
 <ul>
-<li><p><a href="https://www.biorxiv.org/content/10.1101/817791v1">Loss of diversity and accumulation of genetic load in doubled-haploid lines from European maize landrace</a><br />
-Leo Zeitler, Jeffrey Ross-Ibarra and <strong>Markus G Stetter</strong></p></li>
+<li><p><a href="">Male linked genomic regions determine sex in dioecious <em>Amaranthus palmeri</em></a><br />
+<strong>Cátia José Neves</strong>, Maor Matzrafi, <strong>Meik Thiele</strong>, Anne Lorant, Mohsen B. Mesgaran and <strong>Markus G. Stetter</strong> <em>bioRxiv</em></p></li>
 <li><p><a href="https://doi.org/10.1101/777623">Comparative evolutionary analysis and prediction of deleterious mutation patterns between sorghum and maize</a><br />
 Roberto Lozano, Elodie Gazave, Jhonathan P.R. dos Santos, <strong>Markus G Stetter</strong>, Ravi Valluru, Nonoy Bandillo, Samuel B. Fernandes, Patrick J. Brown, Nadia Shakoor, Todd C. Mockler, Jeffrey Ross-Ibarra, Edward S. Buckler and Michael A. Gore <em>bioRxiv</em></p></li>
 </ul>
@@ -445,14 +445,17 @@ Roberto Lozano, Elodie Gazave, Jhonathan P.R. dos Santos, <strong>Markus G Stett
 <div id="section" class="section level2">
 <h2>2020</h2>
 <ul>
-<li><a href="https://www.biorxiv.org/content/10.1101/618389v1">The temporal dynamics of background selection in non-equilibrium populations</a><br />
-Raul Torres*, <strong>Markus G Stetter</strong>*, Ryan Hernandez and Jeffrey Ross-Ibarra <em>bioRxiv</em></li>
+<li><p><a href="https://www.biorxiv.org/content/10.1101/817791v1">Loss of diversity and accumulation of genetic load in doubled-haploid lines from European maize landrace</a><br />
+Leo Zeitler, Jeffrey Ross-Ibarra and <strong>Markus G Stetter</strong></p></li>
+<li><p><a href="https://doi.org/10.1534/genetics.119.302892">The temporal dynamics of background selection in non-equilibrium populations</a><br />
+Raul Torres*, <strong>Markus G Stetter</strong>*, Ryan Hernandez and Jeffrey Ross-Ibarra <em>Genetics</em> <a href="https://www.biorxiv.org/content/10.1101/618389v1">Preprint</a></p></li>
 </ul>
 </div>
 <div id="section-1" class="section level2">
 <h2>2019</h2>
 <ul>
-<li><a href="http://dx.doi.org/10.1093/molbev/msz304">Parallel seed color adaptation during multiple domestication attempts of an ancient new world grain</a> <strong>Markus G Stetter</strong>, Mireia Vidal-Villarejo and Karl Schmid <em>MBE</em><br />
+<li><a href="http://dx.doi.org/10.1093/molbev/msz304">Parallel seed color adaptation during multiple domestication attempts of an ancient new world grain</a><br />
+<strong>Markus G Stetter</strong>, Mireia Vidal-Villarejo and Karl Schmid <em>MBE</em><br />
 <a href="https://www.biorxiv.org/content/10.1101/547943v1">Preprint</a></li>
 </ul>
 </div>
