--- a/reading.html
+++ b/reading.html
@@ -437,6 +437,10 @@ $(document).ready(function () {
 <p>Anybody is welcome to join us. The idea is that everyone reads the paper before and we dive directly in without formal presentation of the paper. If you would like to suggest a paper please email <a href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
 <div id="june" class="section level3">
 <h3>June</h3>
+<div id="thursday-june-18" class="section level4">
+<h4>Thursday June 18</h4>
+<p><a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4327155/">Leder et al 2014</a> The Evolution and Adaptive Potential of Transcriptional Variation in Sticklebacks—Signatures of Selection and Widespread Heritability</p>
+</div>
 <div id="thursday-june-4" class="section level4">
 <h4>Thursday June 4</h4>
 <p><a href="https://www.nature.com/articles/s41588-020-0612-7">Voichek and Weigel 2020</a> Identifying genetic variants underlying phenotypic variation in plants without complete genomes</p>
