--- a/reading.html
+++ b/reading.html
@@ -437,6 +437,10 @@ $(document).ready(function () {
 <p>Anybody is welcome to join us. The idea is that everyone reads the paper before and we dive directly in without formal presentation of the paper. If you would like to suggest a paper please email <a href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
 <div id="july" class="section level3">
 <h3>July</h3>
+<div id="thursday-july-16" class="section level4">
+<h4>Thursday July 16</h4>
+<p><a href="https://www.genetics.org/content/215/3/799">Zhang et al 2020</a> The Impact of Recessive Deleterious Variation on Signals of Adaptive Introgression in Human Populations</p>
+</div>
 <div id="thursday-july-9" class="section level4">
 <h4>Thursday July 9</h4>
 <p><a href="https://www.biorxiv.org/content/10.1101/2020.07.04.188102v1">Choi and Purugganan preprint</a> Telomere lengths in plants are correlated with flowering time variation</p>
