phd position added

--- a/impressum.html
+++ b/impressum.html
@@ -432,8 +432,8 @@ $(document).ready(function () {
 
 
 <p>Angaben gemäß § 5 TMG</p>
-<p>Markus Stetter Musterweg 12345 Musterstadt</p>
-<p>Vertreten durch: Markus Stetter Kontakt: Telefon: 01234-789456 Fax: 1234-56789 E-Mail: mstetter[at]ucdavis.edu</p>
+<p>Markus Stetter Zülpicher Str. 47b 50674 Cologne/Germany</p>
+<p>Vertreten durch: Markus Stetter Kontakt: Telefon: +49 221 4703906 E-Mail: m.stetter[at]uni-koeln.de</p>
 <div id="haftungsausschluss" class="section level2">
 <h2>Haftungsausschluss:</h2>
 <div id="haftung-für-inhalte" class="section level3">
@@ -460,7 +460,7 @@ $(document).ready(function () {
 </div>
 
 
-<p>	&copy; Markus Stetter 2019 <A HREF="impressum.html">Impressum</A> </p>
+<p>	&copy; Markus Stetter 2020 <A HREF="impressum.html">Impressum</A> </p>
 
 
 
