--- a/reading.html
+++ b/reading.html
@@ -435,6 +435,13 @@ $(document).ready(function () {
 <p>C.R.O.P is our weekly journal club for anyone interested in evolution. We meet on Thursdays at 4.30 pm at <a href="https://goo.gl/maps/mamsnSV5ZqThF4YY8">Theatercafe Filmdose</a> for an open discussion about the weekly paper in a relaxed atmosphere.</p>
 <p><strong>Until further notice we will meet online. Please email <a href="mailto:m.stetter@uni-koeln.de">Markus</a> if you would like to participate.</strong></p>
 <p>Anybody is welcome to join us. The idea is that everyone reads the paper before and we dive directly in without formal presentation of the paper. If you would like to suggest a paper please email <a href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
+<div id="september" class="section level3">
+<h3>September</h3>
+<div id="thursday-september-3" class="section level4">
+<h4>Thursday September 3</h4>
+<p><a href="https://nph.onlinelibrary.wiley.com/doi/full/10.1111/nph.16810">Dreissig et al 2020</a> Natural variation in meiotic recombination rate shapes introgression patterns in intraspecific hybrids between wild and domesticated barley</p>
+</div>
+</div>
 <div id="july" class="section level3">
 <h3>July</h3>
 <div id="thursday-july-16" class="section level4">
@@ -576,7 +583,7 @@ $(document).ready(function () {
 <p>Holiday - No C.R.O.P</p>
 </div>
 </div>
-<div id="september" class="section level3">
+<div id="september-1" class="section level3">
 <h3>September</h3>
 <div id="thursday-september-26" class="section level4">
 <h4>Thursday September 26</h4>
@@ -773,7 +780,7 @@ $(document).ready(function () {
 </div>
 
 
-<p>	&copy; Markus Stetter 2019 <A HREF="impressum.html">Impressum</A> </p>
+<p>	&copy; Markus Stetter 2020 <A HREF="impressum.html">Impressum</A> </p>
 
 
 
