people edit and CROP

--- a/reading.html
+++ b/reading.html
@@ -437,6 +437,10 @@ $(document).ready(function () {
 <p>Anybody is welcome to join us. The idea is that everyone reads the paper before and we dive directly in without formal presentation of the paper. If you would like to suggest a paper please email <a href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
 <div id="september" class="section level3">
 <h3>September</h3>
+<div id="thursday-september-24" class="section level4">
+<h4>Thursday September 24</h4>
+<p><a href="https://www.pnas.org/content/117/36/22303">Vianna et al. 2020</a> Genome-wide analyses reveal drivers of penguin diversification</p>
+</div>
 <div id="thursday-september-17" class="section level4">
 <h4>Thursday September 17</h4>
 <p><a href="https://www.sciencedirect.com/science/article/abs/pii/S0092867420306164">Alonge et al. 2020</a> Major Impacts of Widespread Structural Variation on Gene Expression and Crop Improvement in Tomato</p>
