--- a/people.html
+++ b/people.html
@@ -441,7 +441,7 @@ $(document).ready(function () {
 <div style="float: left">
 <p><a href="https://twitter.com/mgstetter"><img src="own_images/Twitter_logo_blue.png" style="width: 20px;"></a><a href="http://mstetter.github.io"><img src="own_images/Home_icon_black.png" style="width: 20px;"></a><a href="https://scholar.google.de/citations?user=yYKVZQQAAAAJ&hl=en"><img src="own_images/scholar.png" style="width: 30px;"></a><a href="http://github.com/mstetter"><img src="own_images/GitHub-Mark-32px.png" style="width:20px;"></a></p>
 </div>
-<p>Markus is a group leader in the Botanical Institute of the University of Cologne <a href="about.html">read more</a></p>
+<p>Markus is group leader in the Institute for Plant Sciences at the University of Cologne <a href="about.html">read more</a></p>
 <!-- break -->
 <p><br> <br> <br> <br> <br> <!-- break --></p>
 <div style="float: left">
@@ -455,19 +455,19 @@ $(document).ready(function () {
 <div style="float: left">
 <p><img src="own_images/people/tom.jpg" style="width: 100px ;border:10px solid white"></p>
 </div>
+<strong>Kerstin Schulz</strong>
+<div style="float: left">
+
+</div>
+<p>Kerstin is a PhD student and part of the CEPLAS graduate school. Kerstin employs ancestral recombination graphs to study the evolution of maize <!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
+<div style="float: left">
+<p><img src="own_images/DSC_0020.jpg" style="width: 100px ;border:10px solid white"></p>
+</div>
 <strong>Tom Winkler</strong>
 <div style="float: left">
 
 </div>
 <p>Tom is a master student studying the genomic distribution of MYB transcription factors in the amaranth genome and their involvement in metabolic pathways <!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
-<div style="float: left">
-<p><img src="own_images/DSC_0020.jpg" style="width: 100px ;border:10px solid white"></p>
-</div>
-<strong>Kerstin Schulz</strong>
-<div style="float: left">
-
-</div>
-<p>Kerstin is CEPLAS graduate student rotating in the lab. Kerstin emplyes ancestral recombination graphs to study the evolution of maize <!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
 <div style="float: left">
 <p><img src="own_images/DSC_0020.jpg" style="width: 100px ;border:10px solid white"></p>
 </div>
