--- a/people.html
+++ b/people.html
@@ -435,7 +435,7 @@ $(document).ready(function () {
 <!-- break -->
 <p><br> <!-- break --></p>
 <div style="float: left">
-<p><img src="own_images/me_2016.jpg" style="width: 100px ;border:10px solid white"></p>
+<p><img src="own_images/people/markus.jpg" style="width: 100px ;border:10px solid white"></p>
 </div>
 <strong>Markus Stetter</strong>
 <div style="float: left">
@@ -443,7 +443,9 @@ $(document).ready(function () {
 </div>
 <p>Markus is group leader in the Institute for Plant Sciences at the University of Cologne <a href="about.html">read more</a></p>
 <!-- break -->
-<p><br> <br> <br> <br> <br> <!-- break --></p>
+<p><br> <br> <br> <!-- break --></p>
+<div id="phd-students" class="section level2">
+<h2>PhD students</h2>
 <div style="float: left">
 <p><img src="own_images/people/jose.jpg" style="width: 100px ;border:10px solid white"></p>
 </div>
@@ -453,13 +455,16 @@ $(document).ready(function () {
 </div>
 <p>José is a PhD student studying introgression during grain amaranth domestication and its influence on the crop’s genome biology. <!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
 <div style="float: left">
-<p><img src="own_images/DSC_0020.jpg" style="width: 100px ;border:10px solid white"></p>
+<p><img src="own_images/people/kerstin.jpg" style="width: 100px ;border:10px solid white"></p>
 </div>
 <strong>Kerstin Schulz</strong>
 <div style="float: left">
 
 </div>
 <p>Kerstin is a PhD student and part of the CEPLAS graduate school. Kerstin employs ancestral recombination graphs to study the evolution of maize <!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
+</div>
+<div id="master-students" class="section level2">
+<h2>Master students</h2>
 <div style="float: left">
 <p><img src="own_images/people/tom.jpg" style="width: 100px ;border:10px solid white"></p>
 </div>
@@ -468,14 +473,64 @@ $(document).ready(function () {
 
 </div>
 <p>Tom is a master student studying the genomic distribution of MYB transcription factors in the amaranth genome and their involvement in metabolic pathways <!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
+<!--
 <div style="float: left">
-<p><img src="own_images/DSC_0020.jpg" style="width: 100px ;border:10px solid white"></p>
+<img src="own_images/DSC_0020.jpg" style="width: 100px ;border:10px solid white">
 </div>
+-->
+</div>
+<div id="student-helpers-and-interns" class="section level2">
+<h2>Student helpers and interns</h2>
 <strong>Julio Martinez</strong>
 <div style="float: left">
 
 </div>
-<p>Julio is a master student wroking on the molecular validation of domestication genes in grain amaranth. <!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
+<p>Julio is a master student wroking on the molecular validation of domestication genes in grain amaranth. <!-- break 
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+
+
+<div style="float: left">
+<img src="own_images/DSC_0020.jpg" style="width: 100px ;border:10px solid white">
+</div>
+--></p>
+<strong>Ahad Kazmi</strong>
+<div style="float: left">
+
+</div>
+<p>Ahad is a biochemistry master student wroking on long read sequencing in amaranth. <!-- break 
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+
+ <div style="float: left">
+<img src="own_images/DSC_0020.jpg" style="width: 100px ;border:10px solid white">
+</div>--></p>
+<strong>Lucas Weber</strong>
+<div style="float: left">
+
+</div>
+<p>Lucas is a CEPLAS intern establishing differnt mapping populations for amaranth. <!-- break 
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br> 
+--></p>
+</div>
+<div id="joining-the-lab" class="section level2">
+<h2>Joining the lab</h2>
 <div style="float: left">
 <p><img src="own_images/DSC_0020.jpg" style="width: 100px ;border:10px solid white"></p>
 </div>
@@ -483,9 +538,10 @@ $(document).ready(function () {
 <div style="float: left">
 
 </div>
-<p>Contact me if you are interested in joining the lab. <a href="mailto:mgstetter@gmail.com">contact me</a></p>
+<p>Contact us if you are interested in joining the lab. <a href="mailto:mgstetter@gmail.com">contact us</a></p>
 <!-- break -->
 <p><br> <br> <br> <br> <br> <!-- break --></p>
+</div>
 <div id="lab-alumni" class="section level2">
 <h2>Lab alumni</h2>
 <ul>
