--- a/reading.html
+++ b/reading.html
@@ -437,6 +437,16 @@ $(document).ready(function () {
 <p>Anybody is welcome to join us. The idea is that everyone reads the paper before and we dive directly in without formal presentation of the paper. If you would like to suggest a paper please email <a href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
 <div id="october" class="section level3">
 <h3>October</h3>
+<div id="thursday-october-22" class="section level4">
+<h4>Thursday October 22</h4>
+<p>No meeting!<br />
+<a href="https://www.nature.com/articles/nrg700">Barton and Keightley 2002</a> Understanding quantitative genetic variation</p>
+</div>
+<div id="thursday-october-15" class="section level4">
+<h4>Thursday October 15</h4>
+<p>No meeting!<br />
+<a href="https://www.sciencedirect.com/science/article/pii/S0960982219306232#:~:text=Domestication%20is%20a%20co%2Devolutionary,are%20critical%20for%20human%20survival.">Purugganan 2019</a> Evolutionary Insights into the Nature of Plant Domestication</p>
+</div>
 <div id="thursday-october-8" class="section level4">
 <h4>Thursday October 8</h4>
 <p><a href="https://www.biorxiv.org/content/10.1101/2020.08.19.257972v1">Kreiner et al preprint</a> The genetic architecture and genomic context of glyphosate resistance</p>
