--- a/reading.html
+++ b/reading.html
@@ -437,6 +437,10 @@ $(document).ready(function () {
 <p>Anybody is welcome to join us. The idea is that everyone reads the paper before and we dive directly in without formal presentation of the paper. If you would like to suggest a paper please email <a href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
 <div id="october" class="section level3">
 <h3>October</h3>
+<div id="thursday-october-29" class="section level4">
+<h4>Thursday October 29</h4>
+<p><a href="https://www.nature.com/articles/s41588-020-00722-w">Zhou et al 2020</a> Triticum population sequencing provides insights into wheat adaptation</p>
+</div>
 <div id="thursday-october-22" class="section level4">
 <h4>Thursday October 22</h4>
 <p>No meeting!<br />
