remove phd position

--- a/news.html
+++ b/news.html
@@ -433,6 +433,11 @@ $(document).ready(function () {
 
 <p> </p>
 <ul>
+<li><strong>October 1</strong> Kerstin starting as PhD student in the lab</li>
+</ul>
+<div id="section" class="section level3">
+<h3>2019</h3>
+<ul>
 <li><strong>November 12</strong> Tom submitted his thesis. Congrats</li>
 <li><strong>September 30</strong> Sophie successfully defended her thesis. Congrats</li>
 <li><strong>September 15 -25</strong> Markus participates in a visit to Beijing, Nanjing and Shanghai presenting work from the lab<br />
@@ -462,6 +467,7 @@ $(document).ready(function () {
 
   gtag('config', 'UA-96594188-4');
 </script>
+</div>
 
 
 <p>	&copy; Markus Stetter 2020 <A HREF="impressum.html">Impressum</A> </p>
