--- a/reading.html
+++ b/reading.html
@@ -435,6 +435,13 @@ $(document).ready(function () {
 <p>C.R.O.P is our weekly journal club for anyone interested in evolution. We meet on Thursdays at 4.30 pm at <a href="https://goo.gl/maps/mamsnSV5ZqThF4YY8">Theatercafe Filmdose</a> for an open discussion about the weekly paper in a relaxed atmosphere.</p>
 <p><strong>Until further notice we will meet online. Please email <a href="mailto:m.stetter@uni-koeln.de">Markus</a> if you would like to participate.</strong></p>
 <p>Anybody is welcome to join us. The idea is that everyone reads the paper before and we dive directly in without formal presentation of the paper. If you would like to suggest a paper please email <a href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
+<div id="november" class="section level3">
+<h3>November</h3>
+<div id="thursday-november-5" class="section level4">
+<h4>Thursday November 5</h4>
+<p><a href="https://www.biorxiv.org/content/10.1101/2020.11.02.364695v1">Tusso et al, preprint</a> Experimental evolution of adaptive divergence under varying degrees of gene flow</p>
+</div>
+</div>
 <div id="october" class="section level3">
 <h3>October</h3>
 <div id="thursday-october-29" class="section level4">
@@ -578,7 +585,7 @@ $(document).ready(function () {
 <p>No C.R.O.P</p>
 </div>
 </div>
-<div id="november" class="section level3">
+<div id="november-1" class="section level3">
 <h3>November</h3>
 <div id="thursday-november-28" class="section level4">
 <h4>Thursday November 28</h4>
@@ -798,7 +805,7 @@ $(document).ready(function () {
 <p><a href="https://www.nature.com/articles/s41477-018-0311-x.epdf?author_access_token=xkzOA83JbiSoU_JcVl-jntRgN0jAjWel9jnR3ZoTv0Ns64ESdcFnXqL2H6X2hOFO74BnjG-JklRF4Wbzm1M5_mixFqX7kt5fUEIyqVSE6l8VRhsCCo5jwGw3gxKZ-XSg4c4mto3kDdAQVTl0uW8nBA%3D%3D">Mieulet et al. 2018</a> Unleashing meiotic crossovers in crops</p>
 </div>
 </div>
-<div id="november-1" class="section level3">
+<div id="november-2" class="section level3">
 <h3>November</h3>
 <div id="thursday-november-29" class="section level4">
 <h4>Thursday November 29</h4>
