--- a/reading.html
+++ b/reading.html
@@ -437,6 +437,10 @@ $(document).ready(function () {
 <p>Anybody is welcome to join us. The idea is that everyone reads the paper before and we dive directly in without formal presentation of the paper. If you would like to suggest a paper please email <a href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
 <div id="november" class="section level3">
 <h3>November</h3>
+<div id="thursday-november-12" class="section level4">
+<h4>Thursday November 12</h4>
+<p><a href="https://www.nature.com/articles/s41467-020-18683-3">Mayer et al, 2020</a> Discovery of beneficial haplotypes for complex traits in maize landraces</p>
+</div>
 <div id="thursday-november-5" class="section level4">
 <h4>Thursday November 5</h4>
 <p><a href="https://www.biorxiv.org/content/10.1101/2020.11.02.364695v1">Tusso et al, preprint</a> Experimental evolution of adaptive divergence under varying degrees of gene flow</p>
