--- a/people.html
+++ b/people.html
@@ -13,6 +13,7 @@
 
 <title>Current lab members</title>
 
+<script src="site_libs/header-attrs-2.1/header-attrs.js"></script>
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/flatly.min.css" rel="stylesheet" />
@@ -515,19 +516,6 @@ $(document).ready(function () {
  <div style="float: left">
 <img src="own_images/DSC_0020.jpg" style="width: 100px ;border:10px solid white">
 </div>--></p>
-<strong>Lucas Weber</strong>
-<div style="float: left">
-
-</div>
-<p>Lucas is a CEPLAS intern establishing differnt mapping populations for amaranth. <!-- break 
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br> 
---></p>
 </div>
 <div id="joining-the-lab" class="section level2">
 <h2>Joining the lab</h2>
