--- a/reading.html
+++ b/reading.html
@@ -13,6 +13,7 @@
 
 <title>What we read</title>
 
+<script src="site_libs/header-attrs-2.1/header-attrs.js"></script>
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/flatly.min.css" rel="stylesheet" />
@@ -435,6 +436,19 @@ $(document).ready(function () {
 <p>C.R.O.P is our weekly journal club for anyone interested in evolution. We meet on Thursdays at 4.30 pm at <a href="https://goo.gl/maps/mamsnSV5ZqThF4YY8">Theatercafe Filmdose</a> for an open discussion about the weekly paper in a relaxed atmosphere.</p>
 <p><strong>Until further notice we will meet online. Please email <a href="mailto:m.stetter@uni-koeln.de">Markus</a> if you would like to participate.</strong></p>
 <p>Anybody is welcome to join us. The idea is that everyone reads the paper before and we dive directly in without formal presentation of the paper. If you would like to suggest a paper please email <a href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
+<div id="january" class="section level3">
+<h3>January</h3>
+<div id="thursday-january-21" class="section level4">
+<h4>Thursday January 21</h4>
+<p><a href="https://www.biorxiv.org/content/10.1101/2020.12.22.423930v1">Desbiez-Piat et al preprint</a> Interplay between high-drift and high-selection limits the genetic load in small selfing maize populations</p>
+</div>
+<div id="thursday-january-14" class="section level4">
+<h4>Thursday January 14</h4>
+<p><a href="https://www.pnas.org/content/117/52/33124">Kistler et al 2020</a> Archaeological Central American maize genomes suggest ancient gene flow from South America</p>
+</div>
+</div>
+<div id="section" class="section level2">
+<h2>2020</h2>
 <div id="december" class="section level3">
 <h3>December</h3>
 <div id="thursday-december-10" class="section level4">
@@ -588,14 +602,15 @@ $(document).ready(function () {
 <p><a href="https://www.nature.com/articles/s41467-019-13730-0">Baduel et al. 2019</a> Relaxed purifying selection in autopolyploids drives transposable element over-accumulation which provides variants for local adaptation</p>
 </div>
 </div>
-<div id="january" class="section level3">
+<div id="january-1" class="section level3">
 <h3>January</h3>
 <div id="thursday-january-30" class="section level4">
 <h4>Thursday January 30</h4>
 <p><a href="https://www.sciencedirect.com/science/article/abs/pii/S0960982219315659">Gilbert et al. 2020</a> Transition from Background Selection to Associative Overdominance Promotes Diversity in Regions of Low Recombination</p>
 </div>
 </div>
-<div id="section" class="section level2">
+</div>
+<div id="section-1" class="section level2">
 <h2>2019</h2>
 <div id="december-1" class="section level3">
 <h3>December</h3>
@@ -783,7 +798,7 @@ $(document).ready(function () {
 <p><a href="https://www.pnas.org/content/116/6/2158">Chen, et al 2019</a> Allele frequency dynamics in a pedigreed natural population</p>
 </div>
 </div>
-<div id="january-1" class="section level3">
+<div id="january-2" class="section level3">
 <h3>January</h3>
 <div id="thursday-january-31" class="section level4">
 <h4>Thursday January 31</h4>
@@ -807,7 +822,7 @@ $(document).ready(function () {
 </div>
 </div>
 </div>
-<div id="section-1" class="section level2">
+<div id="section-2" class="section level2">
 <h2>2018</h2>
 <div id="december-2" class="section level3">
 <h3>December</h3>
