--- a/publications.html
+++ b/publications.html
@@ -436,9 +436,11 @@ $(document).ready(function () {
 <p>   </p>
 <div id="preprint" class="section level2">
 <h2>Preprint</h2>
-<p><a href="https://doi.org/10.1101/2020.12.09.415331">PopAmaranth: A population genetic genome browser for grain amaranths and their wild relatives</a><br />
+<ul>
+<li><a href="https://doi.org/10.1101/2020.12.09.415331">PopAmaranth: A population genetic genome browser for grain amaranths and their wild relatives</a><br />
 <strong>José Gonçalves-Dias</strong> and <strong>Markus G Stetter</strong><br />
-<a href="https://amaranthgdb.org">amaranthGDB.org</a></p>
+<a href="https://amaranthgdb.org">amaranthGDB.org</a></li>
+</ul>
 </div>
 <div id="section" class="section level2">
 <h2>2021</h2>
