--- a/reading.html
+++ b/reading.html
@@ -436,8 +436,23 @@ $(document).ready(function () {
 <p>C.R.O.P is our weekly journal club for anyone interested in evolution. We meet on Thursdays at 4.30 pm at <a href="https://goo.gl/maps/mamsnSV5ZqThF4YY8">Theatercafe Filmdose</a> for an open discussion about the weekly paper in a relaxed atmosphere.</p>
 <p><strong>Until further notice we will meet online. Please email <a href="mailto:m.stetter@uni-koeln.de">Markus</a> if you would like to participate.</strong></p>
 <p>Anybody is welcome to join us. The idea is that everyone reads the paper before and we dive directly in without formal presentation of the paper. If you would like to suggest a paper please email <a href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
+<div id="february" class="section level3">
+<h3>February</h3>
+<div id="thursday-febraury-11" class="section level4">
+<h4>Thursday Febraury 11</h4>
+<p><a href="https://www.nature.com/articles/s41586-020-03091-w">Liu et al 2021</a> Genomic basis of geographical adaptation to soil nitrogen in rice</p>
+</div>
+<div id="thursday-febraury-4" class="section level4">
+<h4>Thursday Febraury 4</h4>
+<p><a href="https://www.biorxiv.org/content/10.1101/2021.01.22.427575v1">Shirsekar et al preprint</a> Fine-scale Population Structure of North American Arabidopsis thaliana Reveals Multiple Sources of Introduction from Across Eurasia</p>
+</div>
+</div>
 <div id="january" class="section level3">
 <h3>January</h3>
+<div id="thursday-january-28" class="section level4">
+<h4>Thursday January 28</h4>
+<p><a href="https://www.nature.com/articles/s41438-020-00441-7">Migicovsky et al 2021</a> Genomic consequences of apple improvement</p>
+</div>
 <div id="thursday-january-21" class="section level4">
 <h4>Thursday January 21</h4>
 <p><a href="https://www.biorxiv.org/content/10.1101/2020.12.22.423930v1">Desbiez-Piat et al preprint</a> Interplay between high-drift and high-selection limits the genetic load in small selfing maize populations</p>
@@ -583,7 +598,7 @@ $(document).ready(function () {
 <p><a href="https://onlinelibrary.wiley.com/doi/full/10.1002/ece3.6002">Price et al. 2020</a> In the presence of population structure: From genomics to candidate genes underlying local adaptation</p>
 </div>
 </div>
-<div id="february" class="section level3">
+<div id="february-1" class="section level3">
 <h3>February</h3>
 <div id="thursday-february-27" class="section level4">
 <h4>Thursday February 27</h4>
@@ -779,7 +794,7 @@ $(document).ready(function () {
 <p><a href="https://www.biorxiv.org/content/10.1101/559419v1">Buffalo and Coop preprint</a> The Linked Selection Signature of Rapid Adaptation in Temporal Genomic Data</p>
 </div>
 </div>
-<div id="february-1" class="section level3">
+<div id="february-2" class="section level3">
 <h3>February</h3>
 <div id="thursday-february-28" class="section level4">
 <h4>Thursday February 28</h4>
