corbinian and roswitha

--- a/people.html
+++ b/people.html
@@ -448,13 +448,21 @@ $(document).ready(function () {
 <div id="phd-students" class="section level2">
 <h2>PhD students</h2>
 <div style="float: left">
+<p><img src="own_images/people/Corbinian_Graf.JPG" style="width: 100px ;border:10px solid white"></p>
+</div>
+<strong>Corbinian Graf</strong>
+<div style="float: left">
+
+</div>
+<p>Corbinian is a PhD student studying the genetic landscape of grain amaranth and how it changed during the repeated domestication. <!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
+<div style="float: left">
 <p><img src="own_images/people/jose.jpg" style="width: 100px ;border:10px solid white"></p>
 </div>
 <strong>José Dias</strong>
 <div style="float: left">
 
 </div>
-<p>José is a PhD student studying introgression during grain amaranth domestication and its influence on the crop’s genome biology. <!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
+<p>José is a PhD student studying gene flow between grain amaranth species and their wild relatives to reconstruct the domestication history of the crop. <!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
 <div style="float: left">
 <p><img src="own_images/people/kerstin.jpg" style="width: 100px ;border:10px solid white"></p>
 </div>
@@ -463,6 +471,14 @@ $(document).ready(function () {
 
 </div>
 <p>Kerstin is a PhD student and part of the CEPLAS graduate school. Kerstin employs ancestral recombination graphs to study the evolution of maize <!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
+</div>
+<div id="lab-manager" class="section level2">
+<h2>Lab manager</h2>
+<strong>Roswitha Lentz</strong>
+<div style="float: left">
+
+</div>
+<p>Roswitha runs the wet lab and does the pipetting magic <!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
 </div>
 <div id="master-students" class="section level2">
 <h2>Master students</h2>
