more CROP papers

--- a/reading.html
+++ b/reading.html
@@ -438,6 +438,14 @@ $(document).ready(function () {
 <p>Anybody is welcome to join us. The idea is that everyone reads the paper before and we dive directly in without formal presentation of the paper. If you would like to suggest a paper please email <a href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
 <div id="february" class="section level3">
 <h3>February</h3>
+<div id="thursday-febraury-25" class="section level4">
+<h4>Thursday Febraury 25</h4>
+<p><a href="https://www.genetics.org/content/216/4/957">Crouse et al 2020</a> Inferring the Allelic Series at QTL in Multiparental Populations</p>
+</div>
+<div id="thursday-febraury-18" class="section level4">
+<h4>Thursday Febraury 18</h4>
+<p><a href="https://www.nature.com/articles/s41586-020-03127-1">Lovell et al 2021</a> Genomic mechanisms of climate adaptation in polyploid bioenergy switchgrass</p>
+</div>
 <div id="thursday-febraury-11" class="section level4">
 <h4>Thursday Febraury 11</h4>
 <p><a href="https://www.nature.com/articles/s41586-020-03091-w">Liu et al 2021</a> Genomic basis of geographical adaptation to soil nitrogen in rice</p>
