--- a/reading.html
+++ b/reading.html
@@ -438,6 +438,14 @@ $(document).ready(function () {
 <p>Anybody is welcome to join us. The idea is that everyone reads the paper before and we dive directly in without formal presentation of the paper. If you would like to suggest a paper please email <a href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
 <div id="march" class="section level3">
 <h3>March</h3>
+<div id="thursday-march-18" class="section level4">
+<h4>Thursday March 18</h4>
+<p><a href="https://www.nature.com/articles/s41467-020-19131-y">Huang et al 2020</a> Genotype by environment interaction for gene expression in Drosophila melanogaster</p>
+</div>
+<div id="thursday-march-11" class="section level4">
+<h4>Thursday March 11</h4>
+<p>MGM2021</p>
+</div>
 <div id="thursday-march-4" class="section level4">
 <h4>Thursday March 4</h4>
 <p><a href="https://nph.onlinelibrary.wiley.com/doi/10.1111/j.1469-8137.2012.04253.x">Meyer et al 2012</a> Patterns and processes in crop domestication: an historical review and quantitative analysis of 203 global food crops</p>
