--- a/reading.html
+++ b/reading.html
@@ -436,8 +436,19 @@ $(document).ready(function () {
 <p>C.R.O.P is our weekly journal club for anyone interested in evolution. We meet on Thursdays at 4.30 pm at <a href="https://goo.gl/maps/mamsnSV5ZqThF4YY8">Theatercafe Filmdose</a> for an open discussion about the weekly paper in a relaxed atmosphere.</p>
 <p><strong>Until further notice we will meet online. Please email <a href="mailto:m.stetter@uni-koeln.de">Markus</a> if you would like to participate.</strong></p>
 <p>Anybody is welcome to join us. The idea is that everyone reads the paper before and we dive directly in without formal presentation of the paper. If you would like to suggest a paper please email <a href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
+<div id="april" class="section level3">
+<h3>April</h3>
+<div id="thursday-april-8" class="section level4">
+<h4>Thursday April 8</h4>
+<p><a href="https://www.biorxiv.org/content/10.1101/2021.03.19.436202v1">Burban et al preprint</a> Gene network simulations provide testable predictions for the molecular domestication syndrome</p>
+</div>
+</div>
 <div id="march" class="section level3">
 <h3>March</h3>
+<div id="thursday-march-25" class="section level4">
+<h4>Thursday March 25</h4>
+<p><a href="https://www.pnas.org/content/118/5/e2023347118">Zhong et al 2021</a> DNA methylation-linked chromatin accessibility affects genomic architecture in Arabidopsis</p>
+</div>
 <div id="thursday-march-18" class="section level4">
 <h4>Thursday March 18</h4>
 <p><a href="https://www.nature.com/articles/s41467-020-19131-y">Huang et al 2020</a> Genotype by environment interaction for gene expression in Drosophila melanogaster</p>
@@ -787,7 +798,7 @@ $(document).ready(function () {
 <h3>May</h3>
 <p>We took a little break to set up the lab and find a place</p>
 </div>
-<div id="april" class="section level3">
+<div id="april-1" class="section level3">
 <h3>April</h3>
 <div id="thursday-april-18" class="section level4">
 <h4>Thursday April 18</h4>
