--- a/reading.html
+++ b/reading.html
@@ -407,6 +407,14 @@ $(document).ready(function () {
 <p>Anybody is welcome to join us. The idea is that everyone reads the paper before and we dive directly in without formal presentation of the paper. If you would like to suggest a paper please email <a href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
 <div id="april" class="section level3">
 <h3>April</h3>
+<div id="thursday-april-22" class="section level4">
+<h4>Thursday April 22</h4>
+<p><a href="https://www.biorxiv.org/content/10.1101/2021.04.07.438828v1">Chen et al preprint</a> Portrait of a genus: the genetic diversity of Zea</p>
+</div>
+<div id="thursday-april-15" class="section level4">
+<h4>Thursday April 15</h4>
+<p><a href="https://www.biorxiv.org/content/10.1101/2021.04.06.438638v1">Mabry et al preprint</a> The Evolutionary History of Wild, Domesticated, and Feral Brassica oleracea (Brassicaceae)</p>
+</div>
 <div id="thursday-april-8" class="section level4">
 <h4>Thursday April 8</h4>
 <p><a href="https://www.biorxiv.org/content/10.1101/2021.03.19.436202v1">Burban et al preprint</a> Gene network simulations provide testable predictions for the molecular domestication syndrome</p>
